--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 #Quitamos 
 NLP_data.ipynb
+proyecto_nlp.py
 scraping_web_rae.py
 result_LanguajeTool.xlsx
 data_preprocessing__result_SCyG__result_LT.xlsx
